@startuml

' ======================
' ENUMS
' ======================
enum StatutCommande {
    CREE
    EN_COURS
    PRETE
    LIVREE
}

' ======================
' CLASSE MERE
' ======================
abstract class Utilisateur {
    - id : int
    - nom : String
    - email : String

    + seConnecter() : boolean
}

' ======================
' ETUDIANT
' ======================
class Etudiant {
    - solde : double
    - consigneRendue : boolean

    + rechargerSolde(montant : double)
    + consulterSolde() : double
}

' ======================
' CUISINIERE
' ======================
class Cuisiniere {
    - specialite : String

    + preparerCommande()
    + changerStatut(c : Commande, s : StatutCommande)
}

' ======================
' ADMIN
' ======================
class Admin {
    + voirStats()
}

' ======================
' PLAT
' ======================
class Plat {
    - id : int
    - nom : String
    - prix : double
    - stock : int

    + decrementerStock()
}

' ======================
' MENU
' ======================
class Menu {
    - plats : List<Plat>

    + afficher()
    + ajouterPlat(p : Plat)
}

' ======================
' COMMANDE
' ======================
class Commande {
    - id : int
    - prixTotal : double
    - statut : StatutCommande

    + calculerPrixFinal()
    + ajouterPlat(p : Plat)
}

' ======================
' PAIEMENT
' ======================
class Paiement {
    - montant : double

    + payer(e : Etudiant, c : Commande)
    + appliquerRemise()
}

' ======================
' CONSIGNE
' ======================
class Consigne {
    - rendue : boolean

    + verifier()
}

' ======================
' HERITAGE
' ======================
Utilisateur <|-- Etudiant
Utilisateur <|-- Cuisiniere
Utilisateur <|-- Admin

' ======================
' RELATIONS
' ======================
Menu "1" o-- "*" Plat
Commande "1" o-- "*" Plat
Etudiant "1" -- "*" Commande
Commande --> StatutCommande
Commande --> Paiement
Cuisiniere --> Commande
Etudiant --> Consigne

@enduml